# tor_relays

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  conanfile.py  conanfile.txt  docker-compose.yml
.github/workflows/: ci.yml
cmake/: tor_relayConfig.cmake.in
config/: relay.toml.example
deploy/: deploy.sh  remote-manage.sh  setup-vps.sh
docs/: README.md  api-reference.md  architecture.md  configuration.md  deployment.md  installation.md  overview.md  security.md  testing.md  troubleshooting.md
include/tor/core/: cell.hpp  channel.hpp  circuit.hpp  relay.hpp
include/tor/crypto/: aes_ctr.hpp  elligator2.hpp  field25519.hpp  hash.hpp  key_store.hpp  keys.hpp  ntor.hpp  secretbox.hpp  tls.hpp
include/tor/directory/: authority.hpp  consensus.hpp  descriptor.hpp
include/tor/modes/: bridge_relay.hpp  exit_relay.hpp  guard_relay.hpp  middle_relay.hpp  relay_behavior.hpp
include/tor/net/: acceptor.hpp  connection.hpp  resolver.hpp
include/tor/policy/: bandwidth.hpp  exit_policy.hpp
include/tor/protocol/: cell_parser.hpp  link_protocol.hpp  relay_protocol.hpp
include/tor/transport/: obfs4.hpp  obfs4_listener.hpp
include/tor/util/: config.hpp  logging.hpp  result.hpp
src/: main.cpp
src/core/: cell.cpp  channel.cpp  circuit.cpp  relay.cpp
src/crypto/: aes_ctr.cpp  elligator2.cpp  field25519.cpp  hash.cpp  key_store.cpp  keys.cpp  ntor.cpp  secretbox.cpp  tls.cpp
src/directory/: authority.cpp  consensus.cpp  descriptor.cpp
src/modes/: bridge_relay.cpp  exit_relay.cpp  guard_relay.cpp  middle_relay.cpp
src/net/: acceptor.cpp  connection.cpp  resolver.cpp
src/policy/: bandwidth.cpp  exit_policy.cpp
src/protocol/: cell_parser.cpp  link_protocol.cpp  relay_protocol.cpp
src/transport/: obfs4.cpp  obfs4_listener.cpp
src/util/: config.cpp  logging.cpp
tests/: test_main.cpp
tests/fixtures/: cell_fixtures.hpp  key_fixtures.hpp
tests/integration/: test_circuit_creation.cpp  test_directory.cpp  test_obfs4_transport.cpp  test_tls.cpp
tests/mocks/: mock_crypto.hpp  mock_network.hpp
tests/unit/: test_cell.cpp  test_circuit.cpp  test_config.cpp  test_crypto.cpp  test_elligator2.cpp  test_exit_policy.cpp  test_field25519.cpp  test_guard_relay.cpp  test_key_store.cpp  test_obfs4.cpp  test_secretbox.cpp
